[project]
name = 'asdf_website'
description = 'The ASDF Website'
readme = 'README.md'
requires-python = '>=3.9'
license-files = ['LICENSE']
authors = [{ name = 'The ASDF Developers' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Development Status :: 5 - Production/Stable',
]
version = '0.0.0'
dependencies = [
    'sphinx',
    'sphinx-autobuild',
    'sphinx-copybutton',
    'sphinx-tabs',
    'furo',
    'tomli',
]
